Title change to synth

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
-<title>12-Note Player (Polyphonic)</title>
+<title>Synth</title>
 <style>
   body {
     padding: 50px;
