added padding to top

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Synth</title>
 <style>
   body {
-    padding: 50px;
+    padding-top: 100px;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
